# arm-musl-mimalloc-actix

./: .env  .gitignore  Cargo.toml  Readme.md
src/: checker.rs  main.rs
