[package]
name = "arm-musl-mimalloc-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = "0.1.26"
openssl = { version = "0.10", features = ["vendored"] }
actix = "0.12"
actix-web = "4.0.0-beta.10"
tokio = { version = "1.13.0", features = ["full"] }
actix-rt = { version = "2.2.0", default-features = false }